<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.KAB.kurskstatokpo.MainActivity"
    tools:showIn="@layout/activity_main">


    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/horizontalScrollView"
        android:layout_alignParentLeft="true"

        android:fillViewport="true"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/et1"
        android:layout_below="@+id/txtNameOKPO">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="*"
            android:id="@+id/RLD">

            <TableRow android:id="@+id/tableRow1" android:layout_width="match_parent" android:layout_height="52dp"
                android:layout_marginTop="3dp">

                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt1" android:layout_width="60dp" android:layout_height="fill_parent"
                    android:text="@string/tab1" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt2" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab2" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt3" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab3" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt4" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab4" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt5" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab5" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt6" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab6" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt7" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab7" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt8" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab8" android:textColor="@color/White"></TextView>
                <TextView android:background="@drawable/cell_shape" android:padding="5dp" android:id="@+id/txt9" android:layout_width="115dp" android:layout_height="fill_parent"
                    android:text="@string/tab9" android:textColor="@color/White"></TextView>

            </TableRow>

            <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:fillViewport="true" android:layout_alignParentLeft="true"
                android:layout_marginLeft="0dp"
                android:id="@+id/scrollView" android:layout_below="@+id/tableRow1">


                <TableLayout android:id="@+id/score_table"
                    android:layout_width="fill_parent"

                    android:layout_height="fill_parent">

                </TableLayout>

            </ScrollView>

        </RelativeLayout>
    </HorizontalScrollView>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et1"
        android:layout_gravity="bottom"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="number"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:autoText="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNameOKPO"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="17sp"
        android:gravity="center" />
</RelativeLayout>
